--- a/app/views/tweeets/_feed.html.erb
+++ b/app/views/tweeets/_feed.html.erb
@@ -1,30 +1,35 @@
 <div class="column is-half">
+  <% if user_signed_in? %>
   <article class="media box">
     <figure class="media-left">
       <p class="image is-64x64">
-        <img src="https://bulma.io/images/placeholders/64x64.png">
+        <%= gravatar_image_tag(current_user.email, size: 64, alt: current_user.name) %>
       </p>
     </figure>
     <div class="media-content">
       <%= render 'tweeets/form' %>
     </div>
   </article>
+    <% end %>
+
 <% @tweeets.each do |tweet | %>
     <div class="box">
       <article class="media">
         <div class="media-left">
           <figure class="image is-64x64">
-            <img src="https://bulma.io/images/placeholders/64x64.png">
+            <%= gravatar_image_tag(tweet.user.email, size: 64, alt: tweet.user.name) %>
           </figure>
         </div>
         <div class="media-content">
           <div class="content">
-            <strong>Elion Selimaj</strong><br/>
-            <small>@elionselimaj</small><br/>
+<!--            <strong>Elion Selimaj</strong><br/> static-->
+            <strong><%= tweet.user.name if tweet.user %></strong><br/>
+            <small><%= tweet.user.username if tweet.user %></small><br/>
             <p>
               <%= tweet.tweeet %>
             </p>
           </div>
+          <% if user_signed_in? %>
           <nav class="level">
             <div class="level-left is-mobile">
               <%= link_to tweet,class: "level-item" do %>
@@ -40,6 +45,7 @@
               <% end %>
             </div>
           </nav>
+          <% end %>
         </div>
       </article>
     </div>
