--- a/app/views/tweeets/index.html.erb
+++ b/app/views/tweeets/index.html.erb
@@ -2,7 +2,11 @@
   <div class="container">
     <div class="columns">
 
-      <%= render 'trends' %>
+      <% if user_signed_in? %>
+        <%= render 'profile' %>
+      <% else %>
+        <%= render 'trends' %>
+      <% end %>
       <%= render 'feed' %>
       <%= render 'who-to-follow' %>
     </div>
